# nucleus-backend

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: rust.yml
migrations/2023-05-09-224044_create_users_table/: up.sql
migrations/2023-05-23-164529_create_labels_table/: down.sql  up.sql
migrations/2023-05-23-164549_create_budgets_table/: down.sql  up.sql
migrations/2023-05-23-164550_create_projects_table/: down.sql  up.sql
migrations/2023-05-23-165356_create_project_labels_table/: down.sql  up.sql
migrations/2023-05-24-181559_create_expenses_table/: down.sql  up.sql
migrations/2032-05-23-165805_database_seeder/: up.sql
sql/aggregates/: expenses.sql
src/: main.rs  schema.rs
src/core/enums/: http_error.rs
src/core/helpers/: auth.rs  date_time.rs  db.rs  db_pagination.rs  form.rs  http.rs  mod.rs  number.rs  responder.rs
src/helpers/: auth.rs  date_time.rs  db_pagination.rs  error_messages.rs  http.rs  mod.rs  number.rs  responder.rs  string.rs
src/http/: kernel.rs  mod.rs
src/http/controllers/: auth_controller.rs  budget_controller.rs  expense_controller.rs  main_controller.rs  mod.rs  project_controller.rs
src/macros/: http_response.rs
src/models/: budget.rs  expense.rs  label.rs  mod.rs  project.rs  user.rs
src/repositories/: budget_repository.rs  expense_repository.rs  mod.rs  project_repository.rs  user_repository.rs
src/services/: auth_service.rs  budget_service.rs  expense_service.rs  mod.rs  project_service.rs
templates/: index.tera.html
templates/layouts/: app.tera.html
(+2 files in other folders)
